welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: not found: value à
var nbPas=à
          ^